# cmp4501

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
cmp4501.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
decision_tree/: datasets.py  tree.py
naive_bayes/: __init__.py  datasets.py  demo_nb.py  model.py
perceptron/: datasets.py  model.py
rl_qlearning/: demo.py  env.py  qlearn.py
scripts/: plot_nb_alpha.py  plot_perceptron_loss.py  plot_qlearning.py  plot_search.py  plot_tree_depth.py  run_all_demos.sh  run_all_plots.sh
search/: __init__.py  cost_search.py  graph.py  heuristics.py  uninformed.py
sudoku/: __init__.py  board.py  csp.py  solver.py
tests/: test_board.py  test_nb.py  test_perceptron.py  test_qlearning.py  test_search.py  test_sudoku.py  test_tree.py
