[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmp4501"
version = "0.0.0"
description = "CMP-4501 Part-1 algorithms"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.2"
] 